--- a/policymanagementtool/src/UI_Components/headersection/headersection.css
+++ b/policymanagementtool/src/UI_Components/headersection/headersection.css
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #179489;
+  background-color: rgb(16, 116, 119);
   display: flex;
   justify-content: space-between;
   align-items: center;
