--- a/policymanagementtool/src/UI_Components/Toolbar/Toolbar.css
+++ b/policymanagementtool/src/UI_Components/Toolbar/Toolbar.css
@@ -4,7 +4,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #703B09;
+    background-color: rgb(16, 116, 119);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -17,7 +17,9 @@
     height: 100%;
 }
 
-
+.Logo {
+    height: 80%;
+}
 
 @media (max-width: 499px) {
     .DesktopOnly {
