--- a/policymanagementtool/src/components/Login/Login.css
+++ b/policymanagementtool/src/components/Login/Login.css
@@ -1,5 +1,5 @@
-.Login
-    margin: 20px auto;
+.Login{
+    margin: 50px auto;
     width: 80%;
     text-align: center;
     box-shadow: 0 2px 3px #ccc;
