--- a/policymanagementtool/src/containers/Policy/PolicyList.css
+++ b/policymanagementtool/src/containers/Policy/PolicyList.css
@@ -1,25 +1,25 @@
-.ingredient{
+.PolicyList{
     width: 30rem;
     max-width: 80%;
     margin: auto;
   }
   
-  .ingredient-list h2 {
+  .PolicyList h2 {
     border-bottom: 3px solid #ccc;
     padding-bottom: 1rem;
   }
   
-  .ingredient-list ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
   }
-  
-  .ingredient-list li {
-    margin: 1rem 0;
-    padding: 0.5rem 1rem;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.26);
-    display: flex;
-    justify-content: space-between;
-  }
-  
+  td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
